--- a/fesztival.html
+++ b/fesztival.html
@@ -4,34 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fesztivál Produkció | TwoTheMoon</title>
-    <link rel="icon" type="image/png" href="https://img.icons8.com/ios-filled/50/ffffff/crescent-moon.png">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Montserrat:wght@800;900&display=swap" rel="stylesheet">
     <style>
         :root { --bg: #000; --silver: #C0C0C0; --border: rgba(255,255,255,0.1); }
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Inter', sans-serif; }
         body { background: var(--bg); color: #fff; line-height: 1.6; }
-        .navbar { position: fixed; top: 0; width: 100%; height: 70px; display: flex; justify-content: space-between; align-items: center; padding: 0 5%; background: #000; border-bottom: 1px solid var(--border); z-index: 1000; }
-        .logo { font-family: 'Montserrat'; font-weight: 900; font-size: 1.3rem; text-decoration: none; color: #fff; }
+        .navbar { position: fixed; top: 0; width: 100%; height: 90px; display: flex; justify-content: space-between; align-items: center; padding: 0 5%; background: #000; border-bottom: 1px solid var(--border); z-index: 1000; }
+        .logo { text-decoration: none; display: flex; flex-direction: column; line-height: 1; }
+        .logo .main { font-family: 'Montserrat'; font-weight: 900; font-size: 1.4rem; letter-spacing: 1px; }
+        .logo .sub { font-family: 'Montserrat'; font-size: 0.5rem; letter-spacing: 3px; color: var(--silver); margin-top: 4px; }
         .nav-links { position: fixed; top: 0; right: -100%; width: 280px; height: 100vh; background: #050505; display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 30px; transition: 0.4s; border-left: 1px solid var(--border); z-index: 999; list-style: none; }
         .nav-links.active { right: 0; }
         .nav-links a { text-decoration: none; color: #fff; font-size: 0.9rem; text-transform: uppercase; font-family: 'Montserrat'; }
-        .hamburger { cursor: pointer; display: flex; flex-direction: column; gap: 6px; z-index: 1001; }
-        .hamburger span { display: block; width: 28px; height: 2px; background: #fff; transition: 0.3s; }
+        .hamburger { cursor: pointer; display: flex; flex-direction: column; gap: 7px; z-index: 1001; }
+        .hamburger span { display: block; width: 25px; height: 1px; background: #fff; transition: 0.3s; }
         .hamburger.open span:nth-child(1) { transform: translateY(8px) rotate(45deg); }
         .hamburger.open span:nth-child(3) { transform: translateY(-8px) rotate(-45deg); }
-        .content { padding: 140px 10% 80px; max-width: 1100px; margin: 0 auto; }
+        .content { padding: 160px 10% 80px; max-width: 1100px; margin: 0 auto; }
         h1 { font-family: 'Montserrat'; font-size: clamp(2.5rem, 5vw, 4rem); text-transform: uppercase; margin-bottom: 30px; line-height: 1; }
         .details { display: grid; grid-template-columns: 1fr 1fr; gap: 40px; margin-top: 50px; }
         .box { border-left: 1px solid var(--silver); padding-left: 20px; }
         .box h3 { font-family: 'Montserrat'; font-size: 1.1rem; text-transform: uppercase; margin-bottom: 10px; }
         .box p { color: #888; font-size: 0.9rem; }
-        .btn { display: inline-block; margin-top: 50px; padding: 18px 40px; background: #fff; color: #000; text-decoration: none; font-weight: 800; text-transform: uppercase; font-size: 0.8rem; }
+        .btn { display: inline-block; margin-top: 50px; padding: 18px 40px; border: 1px solid #fff; color: #fff; text-decoration: none; font-weight: 800; text-transform: uppercase; font-size: 0.8rem; transition: 0.3s; }
+        .btn:hover { background: #fff; color: #000; }
         @media (max-width: 768px) { .details { grid-template-columns: 1fr; } }
     </style>
 </head>
 <body>
     <nav class="navbar">
-        <a href="index.html" class="logo">TwoTheMoon</a>
+        <a href="index.html" class="logo">
+            <div class="main"><span style="color: #fff;">Two</span><span style="color: var(--silver);">TheMoon</span></div>
+            <div class="sub">PRODUCTION HOUSE</div>
+        </a>
         <div class="hamburger" onclick="toggleMenu()"><span></span><span></span><span></span></div>
         <ul class="nav-links" id="navLinks">
             <li><a href="index.html">Főoldal</a></li>
@@ -43,15 +48,15 @@
         </ul>
     </nav>
     <div class="content">
-        <h1>Fesztivál <br> Management</h1>
-        <p style="font-size: 1.2rem; color: var(--silver); margin-top: 20px; max-width: 700px;">5000+ fős tömegrendezvények tervezése és teljes körű technikai kivitelezése.</p>
+        <h1>Fesztivál <br> Produkció</h1>
+        <p style="font-size: 1.2rem; color: var(--silver); margin-top: 20px; max-width: 700px; font-weight: 200;">Komplex helyszíni menedzsment, technikai tervezés és biztonságos lebonyolítás 5000+ főig.</p>
         <div class="details">
-            <div class="box"><h3>Infrastruktúra</h3><p>Profi színpadtechnika, vizuál és hangrendszer építése.</p></div>
-            <div class="box"><h3>Booking</h3><p>Hazai és nemzetközi előadók szerződtetése, rider menedzsment.</p></div>
-            <div class="box"><h3>Biztonság</h3><p>Engedélyek, biztosítási tervek és helyszíni irányítás.</p></div>
-            <div class="box"><h3>Logisztika</h3><p>Backstage koordináció, catering és stáb menedzsment.</p></div>
+            <div class="box"><h3>Technikai háttér</h3><p>Épített színpadok, rider-hű hang- és fénytechnika.</p></div>
+            <div class="box"><h3>Booking & Rider</h3><p>Művészek teljes körű koordinációja a szerződéstől a színpadig.</p></div>
+            <div class="box"><h3>Szervezés</h3><p>Engedélyek, stábkezelés és hatósági kapcsolattartás.</p></div>
+            <div class="box"><h3>Vizuál</h3><p>Egyedi LED-fal tartalmak és fénytervezés.</p></div>
         </div>
-        <a href="kapcsolat.html" class="btn">Szakmai konzultáció</a>
+        <a href="kapcsolat.html" class="btn">Brief leadása</a>
     </div>
     <script>function toggleMenu(){document.getElementById('navLinks').classList.toggle('active');document.querySelector('.hamburger').classList.toggle('open');}</script>
 </body>
