--- a/referencia.html
+++ b/referencia.html
@@ -4,24 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Referenciák | TwoTheMoon</title>
-    <link rel="icon" type="image/png" href="https://img.icons8.com/ios-filled/50/ffffff/crescent-moon.png">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Montserrat:wght@800;900&display=swap" rel="stylesheet">
     <style>
         :root { --bg: #000; --silver: #C0C0C0; --border: rgba(255,255,255,0.1); }
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Inter', sans-serif; }
         body { background: var(--bg); color: #fff; line-height: 1.6; }
-        .navbar { position: fixed; top: 0; width: 100%; height: 70px; display: flex; justify-content: space-between; align-items: center; padding: 0 5%; background: #000; border-bottom: 1px solid var(--border); z-index: 1000; }
-        .logo { font-family: 'Montserrat'; font-weight: 900; font-size: 1.3rem; text-decoration: none; color: #fff; }
+        .navbar { position: fixed; top: 0; width: 100%; height: 90px; display: flex; justify-content: space-between; align-items: center; padding: 0 5%; background: #000; border-bottom: 1px solid var(--border); z-index: 1000; }
+        .logo { text-decoration: none; display: flex; flex-direction: column; line-height: 1; }
+        .logo .main { font-family: 'Montserrat'; font-weight: 900; font-size: 1.4rem; letter-spacing: 1px; }
+        .logo .sub { font-family: 'Montserrat'; font-size: 0.5rem; letter-spacing: 3px; color: var(--silver); margin-top: 4px; }
         .nav-links { position: fixed; top: 0; right: -100%; width: 280px; height: 100vh; background: #050505; display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 30px; transition: 0.4s; border-left: 1px solid var(--border); z-index: 999; list-style: none; }
         .nav-links.active { right: 0; }
         .nav-links a { text-decoration: none; color: #fff; font-size: 0.9rem; text-transform: uppercase; font-family: 'Montserrat'; }
-        .hamburger { cursor: pointer; display: flex; flex-direction: column; gap: 6px; z-index: 1001; }
-        .hamburger span { display: block; width: 28px; height: 2px; background: #fff; transition: 0.3s; }
+        .hamburger { cursor: pointer; display: flex; flex-direction: column; gap: 7px; z-index: 1001; }
+        .hamburger span { display: block; width: 25px; height: 1px; background: #fff; transition: 0.3s; }
         .hamburger.open span:nth-child(1) { transform: translateY(8px) rotate(45deg); }
         .hamburger.open span:nth-child(3) { transform: translateY(-8px) rotate(-45deg); }
-        .content { padding: 140px 10% 80px; max-width: 1100px; margin: 0 auto; }
+        .content { padding: 160px 10% 80px; max-width: 1100px; margin: 0 auto; }
         h1 { font-family: 'Montserrat'; font-size: clamp(2.5rem, 5vw, 4rem); text-transform: uppercase; margin-bottom: 60px; }
-        .ref-item { border: 1px solid var(--border); padding: 50px; margin-bottom: 30px; display: flex; justify-content: space-between; align-items: center; }
+        .ref-item { border: 1px solid var(--border); padding: 50px; margin-bottom: 30px; display: flex; justify-content: space-between; align-items: center; transition: 0.3s; }
+        .ref-item:hover { border-color: var(--silver); }
         .info h2 { font-family: 'Montserrat'; text-transform: uppercase; font-size: 1.8rem; margin-bottom: 10px; }
         .info p { color: #888; max-width: 450px; }
         .stat { text-align: right; }
@@ -32,7 +34,10 @@
 </head>
 <body>
     <nav class="navbar">
-        <a href="index.html" class="logo">TwoTheMoon</a>
+        <a href="index.html" class="logo">
+            <div class="main"><span style="color: #fff;">Two</span><span style="color: var(--silver);">TheMoon</span></div>
+            <div class="sub">PRODUCTION HOUSE</div>
+        </a>
         <div class="hamburger" onclick="toggleMenu()"><span></span><span></span><span></span></div>
         <ul class="nav-links" id="navLinks">
             <li><a href="index.html">Főoldal</a></li>
@@ -46,16 +51,16 @@
     <div class="content">
         <h1>Mérföldkövek</h1>
         <div class="ref-item">
-            <div class="info"><h2>OneDay '25</h2><p>Teljes körű produkciós menedzsment, nemzetközi booking és 48 órás helyszíni irányítás.</p></div>
-            <div class="stat"><span>5000+</span><label>Résztvevő</label></div>
+            <div class="info"><h2>OneDay '25</h2><p>5000+ fős szabadtéri produkció. Nemzetközi booking, egyedi fény- és hangtervezés.</p></div>
+            <div class="stat"><span>5000+</span><label>Kapacitás</label></div>
         </div>
         <div class="ref-item">
-            <div class="info"><h2>OneDay '24</h2><p>A sorozat debütálása. Saját építésű látványvilág és komplex logisztikai háttér.</p></div>
+            <div class="info"><h2>OneDay '24</h2><p>A sorozat első állomása. 48 órás építési idő, komplex logisztikai hálózat.</p></div>
             <div class="stat"><span>2500+</span><label>Résztvevő</label></div>
         </div>
         <div class="ref-item">
-            <div class="info"><h2>Club Projects</h2><p>50+ sikeres klubest és exkluzív rendezvény az elmúlt években.</p></div>
-            <div class="stat"><span>50+</span><label>Esemény</label></div>
+            <div class="info"><h2>Exkluzív Klubestek</h2><p>Több mint 50 sikeres, teltházas esemény a budapesti éjszakában.</p></div>
+            <div class="stat"><span>50+</span><label>Show</label></div>
         </div>
     </div>
     <script>function toggleMenu(){document.getElementById('navLinks').classList.toggle('active');document.querySelector('.hamburger').classList.toggle('open');}</script>
