--- a/kapcsolat.html
+++ b/kapcsolat.html
@@ -4,35 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kapcsolat | TwoTheMoon</title>
-    <link rel="icon" type="image/png" href="https://img.icons8.com/ios-filled/50/ffffff/crescent-moon.png">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Montserrat:wght@800;900&display=swap" rel="stylesheet">
     <style>
         :root { --bg: #000; --silver: #C0C0C0; --border: rgba(255,255,255,0.1); }
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Inter', sans-serif; }
         body { background: var(--bg); color: #fff; }
-        .navbar { position: fixed; top: 0; width: 100%; height: 70px; display: flex; justify-content: space-between; align-items: center; padding: 0 5%; background: #000; border-bottom: 1px solid var(--border); z-index: 1000; }
-        .logo { font-family: 'Montserrat'; font-weight: 900; font-size: 1.3rem; text-decoration: none; color: #fff; }
+        .navbar { position: fixed; top: 0; width: 100%; height: 90px; display: flex; justify-content: space-between; align-items: center; padding: 0 5%; background: #000; border-bottom: 1px solid var(--border); z-index: 1000; }
+        .logo { text-decoration: none; display: flex; flex-direction: column; line-height: 1; }
+        .logo .main { font-family: 'Montserrat'; font-weight: 900; font-size: 1.4rem; letter-spacing: 1px; }
+        .logo .sub { font-family: 'Montserrat'; font-size: 0.5rem; letter-spacing: 3px; color: var(--silver); margin-top: 4px; }
         .nav-links { position: fixed; top: 0; right: -100%; width: 280px; height: 100vh; background: #050505; display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 30px; transition: 0.4s; border-left: 1px solid var(--border); z-index: 999; list-style: none; }
         .nav-links.active { right: 0; }
         .nav-links a { text-decoration: none; color: #fff; font-size: 0.9rem; text-transform: uppercase; font-family: 'Montserrat'; }
-        .hamburger { cursor: pointer; display: flex; flex-direction: column; gap: 6px; z-index: 1001; }
-        .hamburger span { display: block; width: 28px; height: 2px; background: #fff; transition: 0.3s; }
+        .hamburger { cursor: pointer; display: flex; flex-direction: column; gap: 7px; z-index: 1001; }
+        .hamburger span { display: block; width: 25px; height: 1px; background: #fff; transition: 0.3s; }
         .hamburger.open span:nth-child(1) { transform: translateY(8px) rotate(45deg); }
         .hamburger.open span:nth-child(3) { transform: translateY(-8px) rotate(-45deg); }
-        .content { padding: 140px 10% 80px; max-width: 1200px; margin: 0 auto; display: grid; grid-template-columns: 1fr 1.2fr; gap: 80px; }
+        .content { padding: 160px 10% 80px; max-width: 1200px; margin: 0 auto; display: grid; grid-template-columns: 1fr 1.2fr; gap: 80px; }
         h1 { font-family: 'Montserrat'; font-size: clamp(2.5rem, 5vw, 4rem); text-transform: uppercase; margin-bottom: 20px; line-height: 1; }
-        .info { color: #888; }
-        .info b { color: #fff; display: block; margin-top: 25px; text-transform: uppercase; font-size: 0.8rem; letter-spacing: 2px; }
-        .form-box { background: #050505; border: 1px solid var(--border); padding: 40px; }
-        input, select, textarea { width: 100%; background: #0a0a0a; border: 1px solid #1a1a1a; padding: 15px; color: #fff; margin-bottom: 20px; outline: none; transition: 0.3s; }
+        .info { color: #888; font-weight: 200; }
+        .info b { color: #fff; display: block; margin-top: 30px; text-transform: uppercase; font-size: 0.8rem; letter-spacing: 3px; }
+        .form-box { background: #050505; border: 1px solid var(--border); padding: 50px; }
+        input, select, textarea { width: 100%; background: #0a0a0a; border: 1px solid #1a1a1a; padding: 18px; color: #fff; margin-bottom: 20px; outline: none; border-radius: 0; }
         input:focus, textarea:focus { border-color: #fff; }
-        .btn { width: 100%; background: #fff; color: #000; border: none; padding: 20px; text-transform: uppercase; font-weight: 900; cursor: pointer; }
+        .btn { width: 100%; background: #fff; color: #000; border: none; padding: 22px; text-transform: uppercase; font-weight: 900; cursor: pointer; letter-spacing: 2px; transition: 0.3s; }
+        .btn:hover { background: var(--silver); }
         @media (max-width: 900px) { .content { grid-template-columns: 1fr; gap: 50px; } }
     </style>
 </head>
 <body>
     <nav class="navbar">
-        <a href="index.html" class="logo">TwoTheMoon</a>
+        <a href="index.html" class="logo">
+            <div class="main"><span style="color: #fff;">Two</span><span style="color: var(--silver);">TheMoon</span></div>
+            <div class="sub">PRODUCTION HOUSE</div>
+        </a>
         <div class="hamburger" onclick="toggleMenu()"><span></span><span></span><span></span></div>
         <ul class="nav-links" id="navLinks">
             <li><a href="index.html">Főoldal</a></li>
@@ -44,13 +49,13 @@
         </ul>
     </nav>
     <div class="content">
-        <div><h1>Kezdjük el <br> a munkát.</h1><p class="info">24 órán belül szakmai javaslattal keressük.<b>E-mail</b>office@twothemoon.hu<b>Helyszín</b>Budapest, Hungary</p></div>
+        <div><h1>Kezdjük el <br> a tervezést.</h1><p class="info">Vegye fel velünk a kapcsolatot szakmai brief leadása vagy ajánlatkérés céljából.<b>E-mail</b>office@twothemoon.hu<b>Location</b>Budapest, Hungary</p></div>
         <div class="form-box">
-            <form onsubmit="event.preventDefault(); alert('Köszönjük! Üzenetét megkaptuk.');">
+            <form onsubmit="event.preventDefault(); alert('Üzenetét rögzítettük. Hamarosan keressük!');">
                 <input type="text" placeholder="Név" required>
-                <input type="email" placeholder="E-mail" required>
-                <select required><option value="" disabled selected>Típus...</option><option>Fesztivál</option><option>Üzleti</option><option>Privát</option></select>
-                <textarea rows="5" placeholder="Brief / Üzenet" required></textarea>
+                <input type="email" placeholder="E-mail cím" required>
+                <select required><option value="" disabled selected>Esemény típusa...</option><option>Fesztivál Produkció</option><option>Céges Rendezvény</option><option>Privát Esemény</option></select>
+                <textarea rows="5" placeholder="Rövid üzenet / Brief" required></textarea>
                 <button type="submit" class="btn">Küldés</button>
             </form>
         </div>
